--- a/src/main/resources/assets/firearmy/lang/en_US.lang
+++ b/src/main/resources/assets/firearmy/lang/en_US.lang
@@ -16,3 +16,5 @@ item.item_dev.name=Dev Items
 item.gold_plate.name=Gold Plates
 item.iron_plate.name=Iron Plates
 item.fire_flower_seed.name=Fire Flower Seeds
+
+gui.firearmy.fireblacksmithbench.name=Fire Blacksmith Bench
