--- a/src/main/resources/assets/firearmy/lang/en_US.lang
+++ b/src/main/resources/assets/firearmy/lang/en_US.lang
@@ -11,6 +11,7 @@ tile.fire_slab_double.name=Fire Tree Double Slabs
 tile.fire_blacksmith_furnace.name=Fire Blacksmith's Furnace
 tile.floor_drum.name=Floor Drum
 tile.fire_flower_crop.name=Clearly an Error in WAILA
+tile.fire_furnace.name=Fire Furnace
 
 item.item_dev.name=Dev Items
 item.gold_plate.name=Gold Plates
