Worked on Grindstone

--- a/src/main/resources/assets/firearmy/lang/en_US.lang
+++ b/src/main/resources/assets/firearmy/lang/en_US.lang
@@ -21,3 +21,4 @@ item.fire_flower_seed.name=Fire Flower Seeds
 item.fire_wood_sword.name=Fire Wood Sword
 
 gui.firearmy.fireblacksmithbench.name=Fire Blacksmith Bench
+gui.firearmy.grindstone.name=Grindstone
